compiler/tests/fixtures/invalid/semantics/reaction_queues_undefined_plan.viv
// Invalid: reaction queues undefined plan

action trigger:
    roles:
        @actor:
            as: initiator
    reactions:
        queue plan nonexistent:
            with none:
